--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,1 +1,17 @@
 displayFortune: Hello there
+
+security:
+  basic:
+    enabled: false # turn off securing our application endpoints
+ 
+management:
+  security:
+    enabled: false # turn off securing the actuator endpoints
+    
+logging: # <----New sections below
+  level:
+    io:
+      pivotal: DEBUG
+ 
+greeting:
+  displayFortune: false
