--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -11,7 +11,7 @@ management:
 logging: # <----New sections below
   level:
     io:
-      pivotal: DEBUG
+      pivotal: INFO
  
 greeting:
   displayFortune: true
