--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -1,5 +1,3 @@
-displayFortune: Hello there
-
 security:
   basic:
     enabled: false # turn off securing our application endpoints
@@ -11,7 +9,7 @@ management:
 logging: # <----New sections below
   level:
     io:
-      pivotal: INFO
+      pivotal: DEBUG
  
 greeting:
   displayFortune: true
